--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
             <li><a href="workExperience.html">Work experience</a></li>
         </ul>
     </nav>
-    <label for="check" class="con">Contact</label>
-    <input id="check" type="checkbox">
-    <div class="info"><p>Email: omajesse.vaarala@gmail.com phone: +358 44 3207320</p></div>
+    <a class="cta" href="contact.html"><button>Contact</button></a>
 </header>
-
 <div id="tiles"></div>
 
 
