--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
         <h1>Get in touch!</h1>
         <input type="text" id="name" placeholder="Your Name" required>
         <input type="email" id="email" placeholder="Email id" required>
-        <input type="text" id="phone" placeholder="Phone no." required>
-        <textarea rows="4" id="message" placeholder="gaming" required></textarea>
+        <input type="text" id="phone" placeholder="Phone num" required>
+        <textarea rows="4" id="message" placeholder="Message" required></textarea>
         <button type="submit">Send</button>
     </form>
 </div>
