Added Work experience section

--- a/projects.html
+++ b/projects.html
@@ -19,12 +19,77 @@
             <li><a href="workExperience.html">Work experience</a></li>
         </ul>
     </nav>
-    <a class="cta" href="contact.html"><button>Contact</button></a>
+    <a class="cta" href="contact.html"><button class="navButton">Contact</button></a>
 </header>
 
 <!-- Projects SECTION  -->
+<div class="wrapper">
+	<div class="image_gallery image_gallery_top">
+		<div class="image_gallery_item">
+			<img src="images/OneWayForward/Gameplaypic32.PNG" alt="gallery_image">
+			<a class="gameLink" href="GameTemplateOneWayForward.html"></a>
 
+			<div class="overlay">
+                <p class="text"> One Way Forward</p>
+                <p class="infoText"> Genre: 3D, Runner</p>
+				<p class="date">2022</p>
+			</div>
+		</div>
+		<div class="image_gallery_item">
+			<img src="images/MeKiwiDemo/ezgif-2-d70a0733a5.gif" alt="gallery_image">
+			<a class="gameLink" href="GameTemplateMeKiwiDemo.html"></a>
 
+			<div class="overlay">
+                <p class="text"> Me Kiwi Demo</p>
+                <p class="infoText"> Genre: VR, Action</p>
+				<p class="date">2022</p>
+			</div>
+		</div>
+		<div class="image_gallery_item">
+			<img src="images/SurvivalGame/5_1.gif" alt="gallery_image">
+			<a class="gameLink" href="GameTemplateVRSurvtest.html"></a>
+
+			<div class="overlay">
+                <p class="text"> VR survival game Test</p>
+                <p class="infoText"> Genre: VR, world-gen</p>
+				<p class="date">2021</p>
+			</div>
+		</div>
+	</div>
+	<div class="image_gallery image_gallery_bottom">
+		<div class="image_gallery_item">
+			<img src="images/FAS/4_3.gif" alt="gallery_image">
+			<a class="gameLink" href="GameTemplateFAS.html"></a>
+
+			<div class="overlay">
+                <p class="text"> Finnish Arson Simulator</p>
+                <p class="infoText"> Genre: 2D, Sandbox</p>
+				<p class="date">2021</p>
+			</div>
+		</div>
+		<div class="image_gallery_item">
+			<img src="images/3DPuzzle/ezgif-2-bd6e2d80e3.gif" alt="gallery_image">
+			<a class="gameLink" href="GameTemplate3DPuzzle.html"></a>
+
+			<div class="overlay">
+                <p class="text"> 3D puzzle game</p>
+                <p class="infoText"> Genre: 3D, Puzzle</p>
+				<p class="date">2020</p>
+			</div>
+		</div>
+
+		<div class="image_gallery_item">
+			<img src="images/Seleste/seleste.gif" alt="gallery_image">
+			<a class="gameLink" href="GameTemplateSeleste.html"></a>
+
+			<div class="overlay">
+                <p class="text"> Seleste</p>
+                <p class="infoText"> Genre: 2D, Platformer</p>
+				<p class="date">2020</p>
+			</div>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
