--- a/workExperience.html
+++ b/workExperience.html
@@ -26,38 +26,45 @@
 
 <section class="timeline-area">
     
-    <div class="timeline-cell" style="height: 45px;" onclick="toggleElement(document.querySelector('#lrrs'))">
-        <h2>Kesätyö: Potkulautojen kerääjä</h2>
+    <div class="timeline-cell">
+        <h3 style="color: #004B99;">Nokia</h3>
+        <h4>1.12.2022 - 2023-</h4>
+        <h2>Python automaatio harjoitelija</h2>
+        <p>Nokialla ohjelmoin RF testi automaation erilaisia osia, kuten mittalaiteiden kalibraatio
+            tarkistuksia</p>
+    </div>
+    <div class="timeline-cell" onclick="toggleElement(document.querySelector('#lrrs'))">
         <h3 style="color:yellow;">Länsi-Rajan Rakennussaneeraus</h3>
-        <h4>1.11.2021 - 30.1.2022</h4>
+        <h4>1.5.2022 - 30.6.2022</h4>
+        <h2>Kesätyö: Potkulautojen kerääjä</h2>
         <p>Keräsin Bird -lautoja ympäri Oulun kaupungia ladattavaksi</p>
     </div>
     <div class="timeline-cell">
-        <h2>VR peli kehittäjä</h2>
         <h3 style="color: #8ACC3F;">MeKiwi</h3>
         <h4>1.11.2021 - 30.1.2022</h4>
+        <h2>VR peli kehittäjä</h2>
         <p>Tein MeKiwi:lle VR -Peli prototyypin Unityllä, C# -
             kielellä. Työkaluina käytin, GitHub, Blender, Git,
             Visual Studio 2019 ja photoshop.</p>
     </div>
     <div class="timeline-cell">
-        <h2>Harjoitelija paikka</h2>
+        <h3 style="color:rgb(12, 12, 218);">OSAO, Kaukovianio</h3>
+        <h4>2020 - 2023</h4>
+        <h2>Opintojen aloitus - ohjelmistokehitys</h2>
+    </div>
+    <div class="timeline-cell">
         <h3 style="color: #004B99;">Nokia</h3>
-        <h4>1.11.2021 - 30.1.2022</h4>
+        <h4>1.9.2019 - 31.11.2019</h4>
+        <h2>Harjoitelija paikka</h2>
         <p>Nokialla asensin windows 10 käyttöjärjestelmiä
             tietokoneille, sekä konfiguroin tietokoneiden
             asetukset ja asensin työhön tarpeellisisa
             ohjelmistoja.</p>
     </div>
-    <div class="timeline-cell" style="height: 30px;">
-        <h2>Opintojen aloitus - ohjelmistokehitys</h2>
-        <h3 style="color:rgb(12, 12, 218);">OSAO, Kaukovianio</h3>
-        <h4>2020 - 2023</h4>
-    </div>
     <div class="timeline-cell">
-        <h2>Varasto työntekijä</h2>
         <h3 style="color: #203854;">Sokos pukumies</h3>
-        <h4>1.11.2021 - 30.1.2022</h4>
+        <h4>1.6.2019 - 1.7.2019</h4>
+        <h2>Kesätyö: Varasto työntekijä</h2>
         <p>Varastolla työskennellessä hinnoittelin, höyrytin,
             viikkasin, hyllytin ja kuljetin myyntiin meneviä
             vaateita.</p>
@@ -66,7 +73,7 @@
 
 <!-- DETAILS -->
 
-<!-- Class = detail box, Unique element ID's -->
+<!-- Class = detail box, Unique element ID's 
 
 <section id="details">
     <div id="lrrs" class="details-text">
@@ -74,6 +81,8 @@
         <p>test test test test test test test test test</p>
     </div>
 </section>
+
+-->
 
 
 </body>
