--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,19 @@
 
 <div class="container">
     <form action="https://formsubmit.co/omajesse.vaarala@gmail.com" method="POST">
+        <!--Honeypot-->
+        <input type="text" name="_honey" style="display: none;">
+
+        <!--diable Captcha-->
+        <input type="hidden" name="_captcha" value="false">
+
+        <input type="hidden" name="_next" value="">
+
         <h1>Get in touch!</h1>
-        <input type="text" id="name" placeholder="Your Name" required>
-        <input type="email" id="email" placeholder="Email id" required>
-        <input type="text" id="phone" placeholder="Phone num" required>
-        <textarea rows="4" id="message" placeholder="Message" required></textarea>
+        <input type="text" id="name" name="name" placeholder="Your Name" required>
+        <input type="email" id="email" name="email" placeholder="Email" required>
+        <input type="text" id="phone" name="phone" placeholder="Phone num" required>
+        <textarea rows="4" id="message" name="message" placeholder="Message" required></textarea>
         <button type="submit">Send</button>
     </form>
 </div>
@@ -41,25 +49,5 @@
  <script src='https://kit.fontawesome.com/944eb371a4.js'></script>
  <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js'></script><script  src="./script.js"></script>
 
-
- <script src="https://smtpjs.com/v3/smtp.js"></script>
- <script>
-    function sendEmail(){
-        Email.send({
-            Host : "smtp.elasticemail.com",
-            Username : "username",
-            Password : "password",
-            To : 'omajesse.vaarala@gmail.com',
-            From : document.getElementById("email").value,
-            Subject : "New contact from Enquiry",
-            Body : "Name: " + document.getElementById("name").value
-            + "<br> Email: " + document.getElementById("email").value
-            + "<br> phone num: " + document.getElementById("phone").value
-            + "<br> Message: " + document.getElementById("message").value
-        }).then(
-        message => alert("Message Sent Succesfull")
-        );
-    }
- </script>
 </body>
 </html>
