--- a/index.html
+++ b/index.html
@@ -29,13 +29,20 @@
 <div class="introductioncontainer">
     <div class="introductiontitle">
         <div class="textcover" style="height: 100%;"></div>
-        <p style="font-size: 6vh;font-family: 'Bahnschrift'; color: white; text-align: center; display: table-cell; vertical-align: middle;">Moi, nimeni on Jesse.</p>
+        <p style="font-size: 6vh;font-family: 'Bahnschrift'; color: white; text-align: center; display: table-cell; vertical-align: middle;">Hi! My name is Jesse</p>
     </div>
 </div>
 
 <section id="about">
     <div class="about-text">
-        <p> Olen 18-vuotias Oulun kaukovainion tekniikan yksikön ammattikoulun ohjelmistokehitys opiskelija.</p>
+        <p> I am an 18 year old software and gamedeveloper, studying at OSAO Vocational school of communication and information technology. I am currently employed at nokia as a python test-automation trainee. <br><br>
+            i have knowledge in tools like: Unity, Blender, PhotoShop, VirtualBox, MySqlWorkbench, Visual Studio 2019, Visual Studio code, Git, github <br><br>
+            and i know languages like: C#, C, Python, MySql, HTML, CSS, JavaScript<br><br>
+
+
+            /// THIS WEBSITE IS UNDER WORK IN PROGRESS /// <br><br>
+            EXPECT WEIRD SCALING AND OTHER FUN STUFF
+        </p>
         <p> </p>
     </div>
 </section>
