--- a/success.html
+++ b/success.html
@@ -35,14 +35,10 @@
         <!--diable Captcha-->
         <input type="hidden" name="_captcha" value="false">
 
-        <input type="hidden" name="_next" value="https://jesul1.github.io/success.html">
+        <input type="hidden" name="_next" value="">
 
-        <h1>Get in touch!</h1>
-        <input type="text" id="name" name="name" placeholder="Your Name" required>
-        <input type="email" id="email" name="email" placeholder="Email" required>
-        <input type="text" id="phone" name="phone" placeholder="Phone num" required>
-        <textarea rows="4" id="message" name="message" placeholder="Message" required></textarea>
-        <button type="submit">Send</button>
+        <h1>Success!</h1>
+        <p>message sent!</p>
     </form>
 </div>
 
