--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <section id="about">
     <div class="about-text">
         <p> I am an 18 year old software and gamedeveloper, studying at OSAO Vocational school of communication and information technology. I am currently employed at nokia as a python test-automation trainee. <br><br>
-            i have knowledge in tools like: Unity, Blender, PhotoShop, VirtualBox, MySqlWorkbench, Visual Studio 2019, Visual Studio code, Git, github <br><br>
-            and i know languages like: C#, C, Python, MySql, HTML, CSS, JavaScript<br><br>
+            i have knowledge in tools like: Unity, Blender, PhotoShop, VirtualBox, MySqlWorkbench, Visual Studio 2019, Visual Studio code, Git and github <br><br>
+            and i know languages like: C#, C, Python, MySql, HTML, CSS and JavaScript<br><br>
 
 
             /// THIS WEBSITE IS UNDER WORK IN PROGRESS /// <br><br>
