--- a/workExperience.html
+++ b/workExperience.html
@@ -22,8 +22,9 @@
     <a class="cta" href="contact.html"><button>Contact</button></a>
 </header>
 
-<!-- WORK EXPERIENCE SECTION  -->
+<!-- WORK EXPERIENCE SECTION FIN -->
 
+<!--
 <section class="timeline-area">
     
     <div class="timeline-cell">
@@ -68,6 +69,49 @@
         <p>Varastolla työskennellessä hinnoittelin, höyrytin,
             viikkasin, hyllytin ja kuljetin myyntiin meneviä
             vaateita.</p>
+    </div>
+</section>
+-->
+
+<!--WORK EXPERIENCE SECTION EN -->
+
+<section class="timeline-area">
+    
+    <div class="timeline-cell">
+        <h3 style="color: #004B99;">Nokia</h3>
+        <h4>1.12.2022 - 2023-</h4>
+        <h2>Python automation trainee</h2>
+        <p>At Nokia i am working on python test automation for nokia RF products by implimenting features like calibration checks for instruments</p>
+    </div>
+    <div class="timeline-cell" onclick="toggleElement(document.querySelector('#lrrs'))">
+        <h3 style="color:yellow;">Länsi-Rajan Rakennussaneeraus</h3>
+        <h4>1.5.2022 - 30.6.2022</h4>
+        <h2>Summer job: E-scooter collection</h2>
+        <p>i collected and charged bird E-scooters around Oulu in finland</p>
+    </div>
+    <div class="timeline-cell">
+        <h3 style="color: #8ACC3F;">MeKiwi</h3>
+        <h4>1.11.2021 - 30.1.2022</h4>
+        <h2>VR game developer</h2>
+        <p>I made a game prototype for the VR game company MeKiwi, Where i worked on finding fun gameplay mechanics to impliment into future titles</p>
+    </div>
+    <div class="timeline-cell">
+        <h3 style="color:rgb(12, 12, 218);">OSAO, Kaukovianio</h3>
+        <h4>2020 - 2023</h4>
+        <h2>Started studying programming and game development</h2>
+    </div>
+    <div class="timeline-cell">
+        <h3 style="color: #004B99;">Nokia</h3>
+        <h4>1.9.2019 - 31.11.2019</h4>
+        <h2>Trainee</h2>
+        <p>I upgraded laboratory computers and configured settings for testing environments</p>
+    </div>
+    <div class="timeline-cell">
+        <h3 style="color: #203854;">Sokos pukumies</h3>
+        <h4>1.6.2019 - 1.7.2019</h4>
+        <h2>Summer job: Warehouse worker</h2>
+        <p>
+            While working in the warehouse, I priced, steamed, shelved and transported clothes to be sold.</p>
     </div>
 </section>
 
