quick refresh and typo fixes
-changed project descriptions

--- a/GameTemplate3DPuzzle.html
+++ b/GameTemplate3DPuzzle.html
@@ -25,9 +25,14 @@
     <div class="divaider" style="width: 5px; height: 500vh; z-index: 3; right: 0px;"></div>
     <h1>3D Puzzle game</h1>
     <div class="divaider"></div>
-    <p> This project was my first ever 3D game and our first group project, so we had to learn how to develop games in teams and how to use version control tools like git extentions. Our team wanted to try and create a 3D puzzle game
-        with inspiration from portal. <br><br> The game was to be set in anchient egypt where the player is trapped in a pyramid and has to escape. The puzzles would revolve around a mechanic where the player could toggle blocks on and off and also freeze them in time. <br><br>
-        i programmed most of the mechanics in this game like, player movement, puzzle mechanics and the time freezing mechanic. I also did all the level desing and graphics. <br><br> With very little involment from my team members the project failed to see completion, but i learned alot from it.
+    <p>
+        This was my first-ever 3D game and our first group project, where we learned to develop games as a team and use version control tools like Git Extensions. Inspired by Portal, we set out to create a 3D puzzle game.
+        <br><br>
+        The game was set in ancient Egypt, where the player, trapped in a pyramid, must escape by solving puzzles centered around toggling blocks on and off and freezing them in time.
+        <br><br>
+        I programmed most of the mechanics, including player movement, puzzle interactions, and the time-freezing mechanic. I also handled all the level design and graphics.
+        <br><br>
+        Unfortunately, with minimal involvement from my team members, the project wasn’t completed. However, it was a valuable learning experience that taught me a lot about teamwork, game mechanics, and project management.
     </p>
     
 
