--- a/GameTemplateFAS.html
+++ b/GameTemplateFAS.html
@@ -25,13 +25,12 @@
     <div class="divaider" style="width: 5px; height: 500vh; z-index: 3; right: 0px;"></div>
     <h1>Finnish arson Simulator</h1>
     <div class="divaider"></div>
-    <p>Finnish arson simulator is a game made by me and joni pyllkönen. it was a school group project where we where tesked to make our first mobile game. <br> <br>
-        We decided on making a mobile sandbox game where we could experiment and learn about game physics and destruction in unity 
-        we also just wanted an excuse to make things go BOOM! we took inspiration from other sandbox destruction games like bad piggies and noita <br> <br>
-        Joni handled and made the grid based building system, camera controls and destruction- and fire physics. I made all the graphics and ui elements in the game and
-        also made the destructable props, particle effects and some of the logic for the blocks, like TNT.
-
-        i really enjoyed working on this project and it came out great.
+    <p>
+        Finnish arson simulator is a game made by me and joni pyllkönen. it was a school group project where we where tesked to make our first mobile game.
+        <br><br>
+        We decided on making a mobile sandbox game where we could experiment and learn about game physics and destruction in unity we also just wanted an excuse to make things go BOOM! we took inspiration from other sandbox destruction games like bad piggies and noita
+        <br><br>
+        Joni handled and made the grid based building system, camera controls and destruction- and fire physics. I made all the graphics and ui elements in the game and also made the destructable props, particle effects and some of the logic for the blocks, like TNT. i really enjoyed working on this project and it came out great.
     </p>
 </div>
 
