--- a/GameTemplateMeKiwiDemo.html
+++ b/GameTemplateMeKiwiDemo.html
@@ -25,15 +25,13 @@
     <div class="divaider" style="width: 5px; height: 500vh; z-index: 3; right: 0px;"></div>
     <h1>MeKiwi Demo</h1>
     <div class="divaider"></div>
-    <p style="font-size: 22px;"> this game was made when i was a trainee at MeKiwi, witch is finland's biggest vr game developer. The goal of the project was to find new fun mechanics to 
-        impliment and work on for future games. I originally started working on the game alone but i was later joined by 2 of my classmates. <br><br> I have made an entire time-line for everything i did for this project
-        but some of the things i made include, guns, hand physics, climbing physics, sliceing objects, slowing down time and way more fun stuff.. <br><br>
-        this demo definetly turned into a passion prjoect for me and i started working on it on my free time and doing up to 16h work days. i found a lot of the mechanics to be so cool that i really wanted to see them become a reality. <br><br>
-        Two of the high lights in this projcet definetly where the slicing system witch is something i have never seen in a VR game and the physics based player movement and climbing witch required me to make a completly new way to handle player movement. 
-        i have written a document about it here. 
-    
-        From this project i learned a lot about VR development and what is and isn't suitable for a vr game. 
-        i also learned a lot about source control and team work. 
+    <p style="font-size: 22px;"> This game was developed during my trainee period at MeKiwi, Finland's largest VR game developer. The project's goal was to explore new mechanics for future games. I started working on the game solo but was later joined by two classmates.
+        <br><br>
+        Some of the key features I implemented include gun mechanics, hand and climbing physics, slicing objects, slowing time, and more. This project quickly became a passion for me—I often worked on it during my free time, sometimes putting in 16-hour days to bring these ideas to life.
+        <br><br>
+        Two standout features were the slicing system, something rarely seen in VR games, and the physics-based player movement and climbing, which required me to design a completely new system for handling player movement. I've documented this in detail [here].
+        <br><br>
+        Through this project, I gained valuable experience in VR development, understanding what works well in the medium, as well as improving my skills in source control and teamwork.
           
     </p>
 </div>
