--- a/GameTemplateOneWayForward.html
+++ b/GameTemplateOneWayForward.html
@@ -25,10 +25,9 @@
     <div class="divaider" style="width: 5px; height: 500vh; z-index: 3; right: 0px;"></div>
     <h1>One Way Forward</h1>
     <div class="divaider"></div>
-    <p>this game was made imidietly after i worked at meKiwi, it was a school project where we where given a genre for the game we had to make for a finnish lan event Vectorma.<br><br>Our teams genre was infinte-runner so
-        we got to work on a high score based infinite runner with procedurally generated levels and respanw mechanics. we took inspiration from a simular game called The Quest Keeper for mobile.<br><br> I programmed most of the mechanics and features in the game, like
-        the procedural generation now that i had experience with that after the vr survival game. I also made the player movement, chekpoint system and and all the tile functionalty.<br><br> my other team members where in charge of art desing and 3d modeling 
-        and 2D animation, saving mechanics and UI
+    <p>
+        This game was developed right after my time at MeKiwi as part of a school project for the Finnish LAN event, Vectorma. Our team was tasked with creating an infinite runner, so we built a high-score-based game featuring procedurally generated levels and respawn mechanics, inspired by The Quest Keeper.<br><br>
+        I handled most of the programming, including procedural generation (drawing from my experience with a VR survival game), player movement, checkpoint systems, and tile functionality. My teammates focused on art design, 3D modeling, 2D animation, saving mechanics, and UI.
     </p>
 </div>
 
