--- a/GameTemplateSeleste.html
+++ b/GameTemplateSeleste.html
@@ -25,11 +25,12 @@
     <div class="divaider" style="width: 5px; height: 500vh; z-index: 3; right: 0px;"></div>
     <h1>Seleste</h1>
     <div class="divaider"></div>
-    <p>Seleste was a school project and the first game i ever made in unity, the goal of the projects 
-        was to re-create the mechanics from a 2D platformer called Celeste.
-        <br> <br> I really enjoyed making my first game and got carried away adding animations, collectables, moving platforms,
-         checkpoints and a lot more on my free-time and weekends out side of school 
-        <br> <br> So all the art, mechanics and everything was made by me
+    <p>
+        Seleste was a school project and the very first game I created in Unity. The objective of the project was to replicate the mechanics of the 2D platformer Celeste.
+        <br><br>
+        I thoroughly enjoyed working on my first game and got carried away, dedicating my free time and weekends to expanding it beyond the initial scope. I added animations, collectibles, moving platforms, checkpoints, and many other features to bring the game to life.
+        <br><br>
+        Every aspect of the game—art, mechanics, and design—was created entirely by me. This project sparked my passion for game development and taught me the fundamentals of Unity and 2D game design.
     </p>
 </div>
 
