--- a/GameTemplateVRSurvtest.html
+++ b/GameTemplateVRSurvtest.html
@@ -25,11 +25,12 @@
     <div class="divaider" style="width: 5px; height: 500vh; z-index: 3; right: 0px;"></div>
     <h1>VR survival game</h1>
     <div class="divaider"></div>
-    <p style="font-size: 22px;">After makeing the sandbox mobile game with Joni we set our sights on making a VR game. We tried to come up with ideas on what to do in vr and what we hadn't seen before.<br><br> we came up with a procedurally generated survival game where everything would be done by hand
-        the plan was to avoid adding any kind of ui to the game so it would feel really imersive without any "gamey" elements, like building would be handeled by nailing planks, smelting by actually placeing items in ovens and crafting by attaching items in anyway you pleased.<br><br>
-        however this being our 2nd 3D game ever and our first VR game ever with procedural generation, witch is something we hadn't done ever before, it was a bit too much for us to handle, but we learned a lot making it.<br><br> i personally learned alot about procedural generation, shaders in unity, VR development
-        and not to set the scope of a game so large for a small team. it's a shame we didn't have time to finish it. i'd really like to revisit the idea some day.
-          
+    <p style="font-size: 22px;">
+        After creating a sandbox mobile game with Joni, we decided to tackle a VR project. We wanted to explore fresh ideas and came up with a procedurally generated survival game where everything would be done manually, avoiding traditional UI to create a deeply immersive experience.
+        <br><br>
+        The concept involved building by nailing planks, smelting by placing items in ovens, and crafting by physically attaching items however you liked. It was an ambitious idea, especially as it was our second 3D game, our first VR game, and our first attempt at procedural generation.
+        <br><br>
+        While we couldn’t complete the project, we learned a lot during development. I personally gained experience with procedural generation, Unity shaders, VR development, and the importance of setting realistic project scopes for small teams. It's a concept I’d love to revisit in the future.
     </p>
 </div>
 
