--- a/index.html
+++ b/index.html
@@ -35,13 +35,9 @@
 
 <section id="about">
     <div class="about-text">
-        <p> I am an 18 year old software and gamedeveloper, studying at OSAO Vocational school of communication and information technology. I am currently employed at nokia as a python test-automation trainee. <br><br>
-            i have knowledge in tools like: Unity, Blender, PhotoShop, VirtualBox, MySqlWorkbench, Visual Studio 2019, Visual Studio code, Git and github <br><br>
-            and i know languages like: C#, C, Python, MySql, HTML, CSS and JavaScript<br><br>
-
-
-            /// THIS WEBSITE IS UNDER WORK IN PROGRESS /// <br><br>
-            EXPECT WEIRD SCALING AND OTHER FUN STUFF
+        <p> I'm a 20-year-old software and game developer, currently studying at OSAO's Vocational School of Communication and Information Technology. Alongside my studies, I work as a Python test automation trainee at Nokia. <br><br>
+            I enjoy building and creating with tools like Unity, Blender, Photoshop, VirtualBox, MySQL Workbench, Visual Studio (2019), VS Code, and Git/GitHub. <br><br>
+            When it comes to programming, I’ve worked with languages like C#, C, Python, MySQL, HTML, CSS, and JavaScript. I'm always looking to learn more and take on new challenges in tech and game development.<br><br>
         </p>
         <p> </p>
     </div>
