--- a/workExperience.html
+++ b/workExperience.html
@@ -78,8 +78,14 @@
 <section class="timeline-area">
     
     <div class="timeline-cell">
+        <h3 style="color:rgb(12, 12, 218);">OSAO</h3>
+        <h4>1.02.2024 - 16.01.2025</h4>
+        <h2>Gamedevelopment instructor</h2>
+        <p>I completed my Civilian service at OSAO as a Gamedevelopment instructor and worked on VR simulations made to aid in studying</p>
+    </div>
+    <div class="timeline-cell">
         <h3 style="color: #004B99;">Nokia</h3>
-        <h4>1.12.2022 - 2023-</h4>
+        <h4>1.12.2022 - 1.12.2023</h4>
         <h2>Python automation trainee</h2>
         <p>At Nokia i am working on python test automation for nokia RF products by implimenting features like calibration checks for instruments</p>
     </div>
