--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
 
 <section id="about">
     <div class="about-text">
-        <p> I am an 18 year old software and gamedeveloper, studying at OSAO Vocational school of communication and information technology. I am currently employed at nokia as a python test-automation trainee. <br><br>
-            i have knowledge in tools like: Unity, Blender, PhotoShop, VirtualBox, MySqlWorkbench, Visual Studio 2019, Visual Studio code, Git and github <br><br>
+        <p> I am an 20 year old software and gamedeveloper, I am currently studying Information Technology in the Bachelor of Engineering program at OAMK. <br><br>
+            i have knowledge in tools like: Unity, Blender, PhotoShop, VirtualBox, MySqlWorkbench, Visual Studio, Visual Studio code, Git and github <br><br>
             and i know languages like: C#, C, Python, MySql, HTML, CSS and JavaScript<br><br>
 
 
             /// THIS WEBSITE IS UNDER WORK IN PROGRESS /// <br><br>
             EXPECT WEIRD SCALING AND OTHER FUN STUFF
         </p>
-        <p> </p>
     </div>
 </section>
 
